kubernetes/manifest/wordpress_k8s/dynamic_volume_provisioning/deployment-backend-db01.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-db01
  labels:
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/instance: mariadb-001
    app.kubernetes.io/version: "10.5"
    app.kubernetes.io/component: database
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 33309
      targetPort: 3306
  selector:
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/instance: mariadb-001
    app.kubernetes.io/version: "10.5"
    app.kubernetes.io/component: database
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-db01
  labels:
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/instance: mariadb-001
    app.kubernetes.io/version: "10.5"
    app.kubernetes.io/component: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mariadb
      app.kubernetes.io/instance: mariadb-001
      app.kubernetes.io/version: "10.5"
      app.kubernetes.io/component: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mariadb
        app.kubernetes.io/instance: mariadb-001
        app.kubernetes.io/version: "10.5"
        app.kubernetes.io/component: database
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app.kubernetes.io/name
                operator: In
                values:
                - mariadb
            topologyKey: "kubernetes.io/hostname"
#      imagePullSecrets:
#        - name: private-registry
      containers:
      - image: backend-image-01
        imagePullPolicy: Always
        resources:
          limits:
            memory: 512Mi
            cpu: "0.5"
          requests:
            memory: 512Mi
            cpu: "0.25"
        name: mariadb
        ports:
        - containerPort: 3306
          name: mariadb
        volumeMounts:
        - name: mariadb
          mountPath: /var/lib/mysql
      volumes:
      - name: mariadb
        persistentVolumeClaim:
          claimName: backend-db01
