kubernetes/manifest/wordpress_k8s/dynamic_volume_provisioning/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-tls
  annotations:
    cert-manager.io/cluster-issuer: transformer-annotations
spec:
  tls:
  - hosts:
      - www.example.com
    secretName: tls-secret
  rules:
  - host: www.example.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: frontend-app01
            port:
              number: 80
